[gd_scene load_steps=16 format=2]

[ext_resource path="res://Art/tilewater.tres" type="TileSet" id=1]
[ext_resource path="res://TileMap.gd" type="Script" id=2]
[ext_resource path="res://Art/pirate_idle.png" type="Texture" id=3]
[ext_resource path="res://Art/mat.png" type="Texture" id=4]
[ext_resource path="res://Script/KinematicBody2D.gd" type="Script" id=5]
[ext_resource path="res://Script/Game.gd" type="Script" id=6]
[ext_resource path="res://Art/new_dynamicfont.tres" type="DynamicFont" id=7]
[ext_resource path="res://Art/Juhani Junkala [Chiptune Adventures] 1. Stage 1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Art/flag.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 0, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 72, 24, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 4, 2 )

[node name="Game" type="Node"]
script = ExtResource( 6 )

[node name="TileMap0" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 2 )

[node name="TileMap1" type="TileMap" parent="."]
position = Vector2( 320, 0 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 2 )

[node name="TileMap2" type="TileMap" parent="."]
position = Vector2( 640, 0 )
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.25, 0.267 )

[node name="Player" type="Area2D" parent="."]
position = Vector2( 48, 80 )
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Mat" type="Sprite" parent="Player"]
texture = ExtResource( 4 )

[node name="flag" type="Sprite" parent="Player"]
position = Vector2( -8, -8 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Pirate" type="AnimatedSprite" parent="Player"]
position = Vector2( 4, -4 )
frames = SubResource( 7 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 3, 14 )
shape = SubResource( 8 )

[node name="Label" type="Label" parent="."]
anchor_right = 0.25
margin_bottom = 12.0
custom_fonts/font = ExtResource( 7 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Label2" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
anchor_top = 0.1
anchor_right = 0.25
anchor_bottom = 0.1
custom_fonts/font = ExtResource( 7 )
text = "Press Space To Start

Use Arrows To Move"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
anchor_top = 0.25
anchor_right = 0.25
anchor_bottom = 0.25
custom_fonts/font = ExtResource( 7 )
text = "Credits: theLudovyc, Kenney, Juhani Junkala, DezrasDragons"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
[connection signal="body_entered" from="Player" to="Player" method="_on_Player_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
